# accounts

./: .dockerignore  .gitignore  .gitlint  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  SECURITY.md  accounts-0.0.1.tgz  compose-e2e.yml  compose.yml  index.yaml  renovate.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: Bug_report.md  Support_question.md
.github/workflows/: _dependencies.yml  _docker-publish.yml  _e2e-tests.yml  accounts-backend.yml  accounts-e2e.yml  accounts-frontend.yml  accounts.yml  changelog.yml  crowdin_download.yml  crowdin_upload.yml  docker-hub.yml  docker-publish.yml  e2e-tests.yml  ghcr.yml  git.yml  helmfile-linter.yaml  project-quality.yml  release-helm-chart.yaml  spell.yml
crowdin/: config.yml
docker/auth/: normalize.jq  realm.json
docker/files/etc/nginx/conf.d/: default.conf
docker/files/production/etc/nginx/conf.d/: default.conf.template
docker/files/usr/local/etc/gunicorn/: accounts.py
docs/: scopes_and_claims.md  use_in_lasuite.md
env.d/development/: common  common.e2e  kc_postgresql  postgresql  postgresql.e2e
env.d/production.dist/: backend  common  postgresql
src/backend/: MANIFEST.in  conftest.py  manage.py  pyproject.toml  setup.py
src/backend/accounts/: __init__.py  celery_app.py  settings.py  urls.py  wsgi.py
src/backend/accounts/configuration/theme/: default.json
src/backend/authentication/: apps.py  backends.py  factories.py  models.py  settings.py  social_auth.py  strategies.py  urls.py  views.py
src/backend/authentication/api/: serializers.py  views.py
src/backend/authentication/migrations/: 0001_initial.py  0002_uuid7_pk.py
src/backend/authentication/tests/: conftest.py  test_backends.py  test_strategies.py  test_views.py
src/backend/authentication/tests/e2e/: test_auth_request_flow.py  test_oidc_auth_flow.py
src/backend/core/: admin.py  apps.py  enums.py  factories.py  fields.py  models.py  urls.py  validators.py
src/backend/core/api/: __init__.py  filters.py  permissions.py  serializers.py  viewsets.py
src/backend/core/authentication/: __init__.py  backends.py
src/backend/core/configuration/: values.py
src/backend/core/management/commands/: setup_oidc_loadtest.py
src/backend/core/migrations/: 0001_initial.py  0002_initial.py  0003_replace_admin_email_by_username.py  0004_alter_user_managers_remove_user_metadata_and_more.py  0005_non_nullable_charfields.py
src/backend/core/standards/: rfc3986.py  rfc7636.py
src/backend/core/tests/: test_api_config.py  test_api_users.py  test_models_users.py  test_settings.py  test_validators.py
src/backend/core/tests/authentication/: test_backends.py
src/backend/core/tests/e2e/: test_oidc_auth_flow.py
src/backend/core/tests/serializers/: test_user_light_serializer.py
src/backend/core/tests/standards/: test_rfc7636.py
src/backend/core/tests/swagger/: test_openapi_schema.py
src/backend/demo/: defaults.py
src/backend/demo/management/commands/: create_demo.py  createsuperuser.py
src/backend/demo/tests/: test_commands_create_demo.py
src/backend/e2e/: viewsets.py
src/backend/e2e/tests/: test_api_e2e.py
src/backend/locale/de_DE/LC_MESSAGES/: django.po
src/backend/locale/en_US/LC_MESSAGES/: django.po
src/backend/locale/fr_FR/LC_MESSAGES/: django.po
src/backend/locale/nl_NL/LC_MESSAGES/: django.po
src/backend/locale/uk_UA/LC_MESSAGES/: django.po
src/backend/oidc_provider/: __init__.py  factories.py  settings.py  urls.py  validators.py  views.py
src/backend/oidc_provider/tests/: conftest.py  test_settings.py  test_validators.py  test_views.py
src/backend/users/: admin.py  apps.py  models.py
src/backend/users/migrations/: 0001_initial.py  0002_non_nullable_full_name_and_short_name.py  0003_remove_user_metadata.py  0004_uuid7_pk.py
src/frontend/: Dockerfile  package.json
src/frontend/apps/accounts/: .env.development  .gitignore  .prettierignore  cunningham.ts  eslint.config.mjs  next.config.js  next.config.ts  package.json  svg.d.ts  tsconfig.json  vitest.config.ts
src/frontend/apps/accounts/conf/: default.conf
src/frontend/apps/accounts/src/: custom-next.d.ts
src/frontend/apps/accounts/src/api/: helpers.tsx
src/frontend/apps/accounts/src/components/: BoxButton.tsx  Card.tsx  DropButton.tsx  ErrorPage.tsx  Icon.tsx  InfiniteScroll.tsx  Loading.tsx  Overlayer.tsx  SkipToContent.tsx  TextErrors.tsx  index.ts
src/frontend/apps/accounts/src/i18n/: initI18n.ts  translations.json  useLocale.ts
src/frontend/apps/accounts/src/layouts/: MainLayout.tsx  PageLayout.tsx
src/frontend/apps/accounts/src/pages/: 401.tsx  404.tsx  500.tsx  _app.tsx  _error.tsx  index.scss  index.tsx
src/frontend/apps/accounts/src/services/: Crisp.tsx  PosthogAnalytic.tsx
src/frontend/apps/accounts/src/stores/: useResponsiveStore.tsx
src/frontend/apps/accounts/src/styles/: globals.scss
src/frontend/apps/e2e/: .env  .env.example  .gitignore  eslint.config.mjs  package.json  playwright.config.ts  tsconfig.json
src/frontend/apps/e2e/__tests__/: login-keycloak.spec.ts  utils-common.ts  welcome.spec.ts
src/helm/: helmfile.yaml.gotmpl
src/helm/accounts/: Chart.yaml  README.md  generate-readme.sh  values.yaml
src/helm/accounts/templates/: _helpers.tpl  backend_cronjob_list.yaml  backend_deployment.yaml  backend_job.yml  backend_job_createsuperuser.yaml  backend_job_migrate.yaml  backend_svc.yaml  celery_worker_deployment.yaml  frontend_deployment.yaml  frontend_svc.yaml  ingress-redirects.yaml  ingress.yaml  ingress_admin.yaml  ingress_posthog.yaml  ingress_posthog_assets.yaml  media_svc.yaml  posthog_assets_svc.yaml  posthog_svc.yaml  theme_customization_file_cm.yaml
src/helm/env.d/dev/: values.accounts.yaml.gotmpl  values.dev-backend.yaml.gotmpl
src/loadtests/: README.md  __init__.py
src/loadtests/oidc/: __init__.py  check_slo_from_csv.py  config.py  locustfile.py  preflight.py  profiles.py  scenarios.py
src/loadtests/oidc/mock_idp/: __init__.py  run.py  server.py  smoke_test.py
src/mail/: package.json
src/mail/mjml/: template.mjml
(+47 files in other folders)
