#
# accounts package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accounts"
version = "0.0.1"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
description = "Accounts is a Django project that provides a simple account management system for end users of LaSuite."
keywords = ["Django", "Contacts", "Templates", "RBAC"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4",
    "boto3",
    "Brotli",
    "celery[redis]<5.6.0",
    "django-configurations",
    "django-cors-headers",
    "django-countries",
    "django-csp",
    "django-filter",
    "django-lasuite[all]",
    "django-oauth-toolkit",
    "django-parler",
    "django-redis",
    "django-storages[s3]",
    "django-timezone-field>=5.1",
    "django<6.0.0",
    "djangorestframework",
    "drf_spectacular",
    "dockerflow",
    "easy_thumbnails",
    "factory_boy",
    "gunicorn",
    "jsonschema",
    "lxml",
    "mozilla-django-oidc",
    "nested-multipart-parser",
    "psycopg[binary]",
    "PyJWT",
    "python-magic",
    "redis<6.0.0",
    "requests",
    "sentry-sdk",
    "whitenoise",
]

[project.urls]
"Bug Tracker" = "https://github.com/suitenumerique/accounts/issues/new"
"Changelog" = "https://github.com/suitenumerique/accounts/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/suitenumerique/accounts"
"Repository" = "https://github.com/suitenumerique/accounts"

[dependency-groups]
dev = [
    "django-extensions",
    "django-test-migrations",
    "drf-spectacular-sidecar",
    "freezegun",
    "ipdb",
    "ipython",
    "locust",
    "pyfakefs",
    "pylint-django",
    "pylint<4.0.0",
    "pytest-cov",
    "pytest-django",
    "pytest",
    "pytest-icdiff",
    "pytest-xdist",
    "responses",
    "ruff",
    "types-requests",
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
]
line-length = 88


[tool.ruff.lint]
ignore = ["DJ001", "PLR2004"]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","django","third-party","accounts","first-party","local-folder"]
sections = { accounts=["core"], django=["django"] }
extra-standard-library = ["tomllib"]

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S", "SLF"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]
