#
# accounts package
#
[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "accounts"
version = "0.0.1"
authors = [{ "name" = "DINUM", "email" = "dev@mail.numerique.gouv.fr" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: Django",
    "Framework :: Django :: 5",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
]
description = "Accounts is a Django project that provides a simple account management system for end users of LaSuite."
keywords = ["Django", "Contacts", "Templates", "RBAC"]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4==4.15.0",
    "boto3==1.43.48",
    "Brotli==1.2.0",
    "celery[redis]==5.5.3",
    "django-configurations==2.5.1",
    "django-cors-headers==4.9.0",
    "django-countries==9.0.0",
    "django-csp==4.0",
    "django-filter==26.1",
    "django-lasuite[all]==0.0.27",
    "django-oauth-toolkit==3.3.0",
    "django-parler==2.4",
    "django-redis==7.0.0",
    "django-storages[s3]==1.14.6",
    "django-timezone-field>=5.1",
    "django<6.0.0",
    "djangorestframework==3.17.1",
    "drf_spectacular==0.30.0",
    "dockerflow==2026.3.4",
    "easy_thumbnails==2.10.1",
    "factory_boy==3.3.3",
    "gunicorn==26.0.0",
    "jsonschema==4.26.0",
    "lxml==6.1.1",
    "nested-multipart-parser==1.6.0",
    "psycopg[binary]==3.3.4",
    "PyJWT==2.13.0",
    "python-magic==0.4.27",
    "redis<6.0.0",
    "requests==2.34.2",
    "sentry-sdk==2.65.0",
    "social-auth-app-django==6.0.0",
    "whitenoise==6.12.0",
    "django-fernet-encrypted-fields==0.4.0",
]

[project.urls]
"Bug Tracker" = "https://github.com/suitenumerique/accounts/issues/new"
"Changelog" = "https://github.com/suitenumerique/accounts/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/suitenumerique/accounts"
"Repository" = "https://github.com/suitenumerique/accounts"

[dependency-groups]
dev = [
    "django-extensions==4.1",
    "django-test-migrations==1.5.0",
    "drf-spectacular-sidecar==2026.7.1",
    "freezegun==1.5.5",
    "ipdb==0.13.13",
    "ipython==9.15.0",
    "locust==2.45.0",
    "pyfakefs==6.2.0",
    "pylint-django==2.8.0",
    "pylint<4.0.0",
    "pytest-cov==7.1.0",
    "pytest-django==4.12.0",
    "pytest==9.1.1",
    "pytest-icdiff==0.9",
    "pytest-xdist==3.8.0",
    "responses==0.26.2",
    "ruff==0.15.21",
    "types-requests==2.33.0.20260712",
    "pytest-responses>=0.6.0",
]

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests"] } }
zip-safe = true

[tool.distutils.bdist_wheel]
universal = true

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    "build",
    "venv",
    "__pycache__",
]
line-length = 88


[tool.ruff.lint]
ignore = ["DJ001", "PLR2004"]
select = [
    "B", # flake8-bugbear
    "BLE", # flake8-blind-except
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "F", # Pyflakes
    "I", # isort
    "PLC", # pylint-convention
    "PLE", # pylint-error
    "PLR", # pylint-refactoring
    "PLW", # pylint-warning
    "RUF100", # Ruff unused-noqa
    "RUF200", # Ruff check pyproject.toml
    "S", # flake8-bandit
    "SLF", # flake8-self
    "T20", # flake8-print
    "UP", # pyupgrade
]

[tool.ruff.lint.isort]
section-order = ["future","standard-library","django","third-party","accounts","first-party","local-folder"]
sections = { accounts=["core"], django=["django"] }

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = ["S", "SLF"]

[tool.pytest.ini_options]
addopts = [
    "-v",
    "--cov-report",
    "term-missing",
    # Allow test files to have the same name in different directories.
    "--import-mode=importlib",
]
python_files = [
    "test_*.py",
    "tests.py",
]
